--- a/yes.html
+++ b/yes.html
@@ -7,12 +7,12 @@
     <body>
         <div class="container">
             <div >
-                <h1 class = "header_text">Yippie!!! </h1>
+                <h1 class = "header_text">you chose the right answer youre safe</h1>
             </div>
             <div class="gif_container">
                 <img src="./style/images/cute-cat.gif" alt="Cute animated illustration">
             </div>
-            <p class = "text"> See you soon for a suprise!</p>
+            <p class = "text"> thank you babyy i love you with all my heart my sweet beautiful perfect girlfriend</p>
         </div>
        
     </body> 
